[package]
name = "soundboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
audioadapter = "3.0.0"
cpal = {version = "0.17.3", features = ["jack"]}
rubato = {version="2.0.0", features= ["fft_resampler"]}
symphonia = {version = "0.5.5", features = ["all"]}

eframe = { version="0.34.2", default-features = true, features = [
  "default", "wgpu"
] }
wgpu = { version = "22.0.0", default-features = true, features = [
    "fragile-send-sync-non-atomic-wasm",
] }
egui_extras = { version="0.34.2", features = ["default", "image"] }
env_logger = {version="0.11.10",features = ["auto-color", "humantime"]}
